--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -13,15 +13,15 @@ build-packages:
   - gcc
 
 parts:
-  docui:
+  testdocui:
     source: .
     plugin: go
     go-importpath: github.com/tetymd/testdocui
     build-snaps:
       - go/latest/stable
     override-build: |
-      go build -o /build/test-snap-tetymd/parts/docui/go/bin/testdocui .
+      go build -o /build/test-snap-tetymd/parts/testdocui/go/bin/testdocui .
 
 apps:
   test-snap-tetymd:
-    command: docui
+    command: testdocui
