--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -21,7 +21,7 @@ parts:
     build-snaps:
       - go/latest/stable
     override-build: |
-      make install
+      go build -o $SANP/bin/docui .
 
 apps:
   test-snap-tetymd:
