--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -20,7 +20,7 @@ parts:
     build-snaps:
       - go/1.11/stable
     override-build: |
-      go build -o $SANP/bin/docui .
+      GO111MODULE=on go build -o $SANP/bin/docui .
 
 apps:
   test-snap-tetymd:
