--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -8,19 +8,18 @@ description: |
 grade: stable
 confinement: classic
 
-build-packages:
-  - git
-  - gcc
-
 parts:
   docui:
     source: .
     plugin: go
     go-importpath: github.com/tetymd/testdocui
+    build-packages:
+      - git
+      - gcc
     build-snaps:
       - go/1.11/stable
-    override-build: |
-      go build -o $SANP/bin/docui .
+    # override-build: |
+      # go build -o $SANP/bin/docui .
 
 apps:
   test-snap-tetymd:
