--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -13,13 +13,14 @@ parts:
     source: .
     plugin: go
     go-importpath: github.com/tetymd/testdocui
+    source-type: git
     build-packages:
       - git
       - gcc
     build-snaps:
       - go/1.11/stable
-    # override-build: |
-      # go build -o $SANP/bin/docui .
+    override-build: |
+      go build -o $SANP/bin/docui .
 
 apps:
   test-snap-tetymd:
