--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -9,7 +9,7 @@ grade: stable
 confinement: classic
 
 parts:
-  docui:
+  testdocui:
     source: .
     plugin: go
     go-importpath: github.com/tetymd/testdocui
@@ -19,11 +19,10 @@ parts:
     build-snaps:
       - go/1.11/stable
     override-build: |
-      snapcraftctl build
-      # go build -o $SANP/bin/docui .
+      go build -o $SANP/bin/docui .
 
 apps:
   test-snap-tetymd:
-    command: docui
+    command: testdocui
 
 
